--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,24 +1,24 @@
 :root {
-  --max-width: 1100px;
+  /* --max-width: 1100px;
   --border-radius: 12px;
   --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono', 'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
+    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace; */
 
-  --foreground-rgb: rgb(35, 53, 44);
+  /* --foreground-rgb: rgb(35, 53, 44);
   --background-start-rgb: 52, 78, 65;
-  --background-end-rgb: 88, 129, 87;
+  --background-end-rgb: 88, 129, 87; */
 
   /* --primary-glow: conic-gradient(from 180deg at 50% 50%, #16abff33 0deg, #0885ff33 55deg, #54d6ff33 120deg, #0071ff33 160deg, transparent 360deg);
   --secondary-glow: radial-gradient(rgba(255, 255, 255, 1), rgba(255, 255, 255, 0)); */
 
-  --tile-start-rgb: 52, 78, 65;
+  /* --tile-start-rgb: 52, 78, 65;
   --tile-end-rgb: 88, 129, 87;
   --tile-border: conic-gradient(#00000080, #00000040, #00000030, #00000020, #00000010, #00000010, #00000080);
 
   --callout-rgb: 238, 240, 241;
   --callout-border-rgb: 172, 175, 176;
   --card-rgb: 218, 215, 205;
-  --card-border-rgb: 88, 129, 87;
+  --card-border-rgb: 88, 129, 87; */
 }
 
 /* @media (prefers-color-scheme: dark) {
@@ -41,28 +41,28 @@
   }
 }  */
 
-* {
+/* * {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
-}
+} */
 
-html,
+/* html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
-}
+} */
 
-body {
-  color: rgb(var(--foreground-rgb));
-  /* background: linear-gradient(to bottom, transparent, rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb)); */
-  /* background-color: rgb(27, 40, 33); */
-}
+/* body {
+  /* color: rgb(var(--foreground-rgb)); */
+/* background: linear-gradient(to bottom, transparent, rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb)); */
+/* background-color: rgb(27, 40, 33); */
+/* }  */
 
-a {
+/* a {
   color: inherit;
   text-decoration: none;
-}
+} */
 
 /* @media (prefers-color-scheme: dark) {
   html {
